--- a/web-ui/src/components/App.css
+++ b/web-ui/src/components/App.css
@@ -113,6 +113,7 @@ header {
 
 .avatar-options {
   position: absolute;
+  z-index: 100;
   top: 5rem;
   background: var(--color-mid-gray);
   border-radius: var(--radius-small);
@@ -239,6 +240,7 @@ header {
 
 .item {
   width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -257,6 +259,7 @@ header {
   height: 100%;
   display: grid;
   place-items: center;
+  align-content: center;
 }
 
 .item--small {
