--- a/web-ui/src/components/videoPlayer/VideoPlayer.css
+++ b/web-ui/src/components/videoPlayer/VideoPlayer.css
@@ -1,5 +1,3 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/video.js/7.6.6/video-js.css');
-
 /* Variable Overrides */
 :root {
   --video-width: 88.4rem;
@@ -28,25 +26,29 @@
   border-radius: 0 0 5px 5px;
 }
 
-@media (max-width: 480px) { /* Smaller Screens */
+@media (max-width: 480px) {
+  /* Smaller Screens */
   :root {
     --video-width: 100%;
   }
 }
 
-@media (min-width: 480px) and (max-width: 767px) { /* Small Screens */
+@media (min-width: 480px) and (max-width: 767px) {
+  /* Small Screens */
   :root {
     --video-width: 100%;
   }
 }
 
-@media (min-width: 767px) and (max-width: 1024px) { /* Large Screens */
+@media (min-width: 767px) and (max-width: 1024px) {
+  /* Large Screens */
   :root {
     --video-width: 100%;
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1280px) { /* Large Screens */
+@media (min-width: 1024px) and (max-width: 1280px) {
+  /* Large Screens */
   :root {
     --video-width: 64rem;
   }
